--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Run Tests
+        run: |
+              cd app
+              npm install
+              npm test
+
+
 
       - name: Build and Push Docker image
         uses: docker/build-push-action@v5
